--- a/home/assets/css/banner.css
+++ b/home/assets/css/banner.css
@@ -1,21 +1,17 @@
-*{
-    margin: 0;
-    padding: 0;
-}
 .text-none{
     text-decoration: none;
 }
 .banner-box{
     width: 100%;
-    height: 777px;
+    height: 522px;
 }
 .banner-img{
     width: 1623px;
-    height: 777px;
+    height: 522px;
     /* min-height:500px; */
     margin: auto;
     background: url(../img/confile_1573179955.png);
-    background-position: center center;
+    background-position: center -250px;
     background-size:100%;
     background-repeat: no-repeat;
     background-size: cover;
@@ -25,9 +21,9 @@
 }
 .banner{
     width: 1200px;
-    height: 542px;
+    height: 522px;
     /* -------------------------    更改   ------------------------- */
-    margin: 200px 0 0 210px;
+    margin:0 auto;
 
 
     
@@ -170,6 +166,27 @@
     font-weight: 0;
     line-height: 15px;
     text-align: center;
+}
+.btn-box{
+    width:100%;
+    height:40px;
+    margin:0 !important;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.btn-box button{
+    width: 80px;
+    height: 25px;
+    border-radius:12.5px;
+    border:0;
+    box-shadow: 3px 3px 10px 0px #888;
+}
+.btn-left{
+    background-color:#fff;
+}
+.btn-right{
+    background-color:red;;
 }
 .banner-login_loginbar{
     width: 80px;
