--- a/home/assets/css/nav.css
+++ b/home/assets/css/nav.css
@@ -2,7 +2,7 @@
     width: 1200px;
     height: 40px;
     margin:0 auto;
-    border-bottom: 3px solid #b4424c;
+    border-bottom: 3px solid red;
     background-color: #fff;
     overflow: hidden;
 }
