--- a/home/assets/css/model.css
+++ b/home/assets/css/model.css
@@ -79,17 +79,7 @@ li{
     background-color: #fff;
     color: red;
 }
-header{
-    width: 100%;
-    height: 126px;
-}
-header .header-box{
-    width: 1200px;
-    height: 126px;
-    /* background-color: red; */
-    margin: 0 auto;
-    overflow: hidden;
-}
+
 .quick .quick-center{
     height: 300px;
     width: 40px;
@@ -127,6 +117,22 @@ header .header-box{
 .quick .quick-bottom>li:hover{
     background-color: red;
 }
+header{
+    width: 100%;
+    height: 126px;
+}
+header .header-top{
+    width: 100%;
+    height: 30px;
+    background-color: #eee;
+}
+header .header-box{
+    width: 1200px;
+    height: 156px;
+    /* background-color: red; */
+    margin: 0 auto;
+    overflow: hidden;
+}
 header .header-left{
     width: 232px;
     height: 126px;
@@ -150,9 +156,10 @@ header .header-right{
     float: left;
 }
 header .head-top{
-    width: 968px;
+    width: 1200px;
     height: 30px;
     background-color: #eee;
+    margin: 0 auto;
     overflow: hidden;
 }
 header .site-left{
@@ -166,7 +173,7 @@ header .site-left img{
 header .site-left>li{
     float: left;
     line-height: 30px;
-    margin-left: 25px;
+    margin-right: 25px;
 }
 header .site-left>li:hover a{
     color: red;
@@ -175,7 +182,7 @@ header .site-left a{
     color: #8c8c8c;
 }
 header .site-left>.qin{
-    margin-left: 0px;
+    margin-left: -26px;
 }
 header .site-left .se{
     color: red;
@@ -200,6 +207,10 @@ header .site-right li+li::before{
     padding-left: 12px ;
 
 }
+/* .site-right:before{
+    content: "";
+    display: inline-block;
+} */
 header .tu-biao{
     width: 15px;
     height: 30px;
@@ -238,7 +249,7 @@ header .btn{
     border: 0;
     width: 70px;
     height: 36px;
-    line-height: 36px;
+    line-height: 34px;
     color: #fff;
     font-size: 14px;
     cursor: pointer;
