--- a/home/assets/css/index.css
+++ b/home/assets/css/index.css
@@ -3,4 +3,6 @@
 @import "nav.css";
 @import "banner.css";
 @import "banner-goods.css";
+@import "container.css";
+@import "goods.css";
 @import "footer.css";
